--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "jquery": "^3.5.1",
     "multiselect-react-dropdown": "^1.6.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-three-state-checkbox": "^1.3.4",
+    "react-tri-state-checkbox": "^0.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
